--- a/app/.env
+++ b/app/.env
@@ -3,18 +3,19 @@ API_HOST=0.0.0.0
 API_PORT=8000
 
 # Google API Configuration for Gemini models
-GOOGLE_API_KEY=your_google_api_key_here
+GOOGLE_API_KEY=AIzaSyCUDEBisuoB0t8OSA9osKegm5Lg-W8d_Yw
 LLM_MODEL=gemini-1.5-flash
 EMBEDDING_MODEL=embedding-001
 
 # College Website
-WEBSITE_URL=https://your-college-website.edu
+WEBSITE_URL=https://www.nitpy.ac.in/
 
 # Database Settings
-DATABASE_URL=sqlite:///college_data.db
+DATABASE_URL=mysql+pymsql://root:Vishnu2002@192.168.224.129/college_website
+
 
 # MongoDB Vector Search Configuration
-MONGODB_URI=mongodb://username:password@your-mongodb-host:27017
+MONGODB_URI=mongodb+srv://vishnubalaji2018:Vishnu2002@cluster0.dxyohip.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_DB_NAME=college_bot
 
 # PDF Directory
