--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = ">=3.10,<=3.12"  # Specify compatible Python versions
+python = ">=3.10,<3.13"  # Specify compatible Python versions
 fastapi = "^0.110.0"
 uvicorn = "^0.27.0"
 langchain = "0.1.12"  # Pin to specific versions
@@ -20,6 +20,7 @@ google-generativeai = "^0.3.2"
 pydantic = "^2.6.1"
 python-dotenv = "^1.0.1"
 requests = "^2.31.0"
+pymysql = "^1.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
